--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>JHipster microservice homepage</title>
+    <title>ECOS applications microservice homepage</title>
     <style>
         ::-moz-selection {
             background: #b3d4fc;
